Fix role manager on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,7 +27,6 @@ body {
 }
 
 .search-result {
-    position: absolute;
     max-height: 230px;
     width: 95%;
     overflow: auto;
